@@ -1,7 +1,7 @@
 Release notes for SIP Express Router (ser)
 ***********************************************
 
-$Id: NEWS,v 1.91 2008/10/07 11:22:05 andrei Exp $
+$Id: NEWS,v 1.92 2008/11/07 14:53:35 andrei Exp $
 
 
 
@@ -230,6 +230,14 @@ new config variables:
      assocation (default: 180 s).
   sctp_send_ttl = milliseconds - number of milliseconds before an unsent
      message/chunk is dropped (default: 32000 ms or 32 s).
+  sctp_send_retries - how many times to attempt re-sending a message on a
+                      re-opened association, if the sctp stack did give up
+                      sending it (it's not related to sctp protocol level
+                      retransmission). Useful to improve reliability with
+                      peers that reboot/restart or fail over to another 
+                      machine. WARNING: use with care and low values (e.g.
+                      1-3) to avoid "multiplying" traffic to unresponding 
+                      hosts (default: 0).
   server_id = number - A configurable unique server id that can be used to
                        discriminate server instances within a cluster of
                        servers when all other information, such as IP adddresses
